RESOLVED FIXED57151
Fix compilation with Solaris 10/SunStudio 12 CC in Source/WebCore/bindings/js/JSJavaScriptCallFrameCustom.cpp: ambiguity in ?:
https://bugs.webkit.org/show_bug.cgi?id=57151
Summary Fix compilation with Solaris 10/SunStudio 12 CC in Source/WebCore/bindings/js...
Ben Taylor
Reported 2011-03-26 08:04:25 PDT
in Source/WebCore/bindings/js/JSJavaScriptCallFrameCustom.cpp on Solaris 10 with Sun Studio 12 CC, the compiler emits this error Error: Ambiguous "?:" expression, second operand of type "JSC::JSObject*" and third operand of type "JSC::JSValuePtr" can be converted to one another. This is from patch 14 of 17 by Thiago Macieria from bug https://bugs.webkit.org/show_bug.cgi?id=24932
Attachments
Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler (1.35 KB, patch)
2011-03-26 08:13 PDT, Ben Taylor
no flags
Ben Taylor
Comment 1 2011-03-26 08:13:50 PDT
Created attachment 87025 [details] Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler This is a update from patch 14 of 17 in bug https://bugs.webkit.org/show_bug.cgi?id=24932 done by Thiago Macieria. Compiles correctly on Solaris 10/Sun Studio 12 CC on qt-4.7.2 with webkit enabled. Patch is against webkit head.
Oliver Hunt
Comment 2 2011-03-27 00:55:28 PDT
Comment on attachment 87025 [details] Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler r=me, i'm surprised this doesn't fail on other platforms as gcc, et all all seem finicky about ?: operator. Thanks for the patch.
Eric Seidel (no email)
Comment 3 2011-03-27 01:06:04 PDT
Comment on attachment 87025 [details] Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler What's the ambiguity?
Eric Seidel (no email)
Comment 4 2011-03-27 01:06:21 PDT
I see. OK.
WebKit Commit Bot
Comment 5 2011-03-27 02:54:12 PDT
Comment on attachment 87025 [details] Proposed patch which compiles correctly in qt-4.7.1 with webkit enabled on Solaris 10 with SS12 C++ compiler Clearing flags on attachment: 87025 Committed r82060: <http://trac.webkit.org/changeset/82060>
WebKit Commit Bot
Comment 6 2011-03-27 02:54:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.