2011-03-27  Ben Taylor  <bentaylor.solx86@gmail.com>

Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=57151, patch derived from set
        created by Thiago Macieria in bug https://bugs.webkit.org/show_bug.cgi?id=24932

        Fix compile issue on Solaris 10/Sun Studio 12 regarding ambiguity on ?: functions

        * bindings/js/JSJavaScriptCallFrameCustom.cpp:
        (WebCore::JSJavaScriptCallFrame::thisObject):

Canonical link: https://commits.webkit.org/71865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82060 268f45cc-cd09-0410-ab3c-d52691b4dbfc